fix horizontal scrolling on ios, add accordion to hide playback buttons

--- a/source/assets/styles/component/_buttons.scss
+++ b/source/assets/styles/component/_buttons.scss
@@ -51,10 +51,11 @@
 
 	&__solid--white {
 		background-color: $white;
+		color: $black;
 	}
 
 	&__border--white {
-		border-color: $white;
+		border-color: $white !important;
 		color: $white;
 	}
 
