--- a/source/assets/styles/global/_reset-custom.scss
+++ b/source/assets/styles/global/_reset-custom.scss
@@ -11,6 +11,10 @@ body {
 	overflow-x: hidden;
 }
 
+main {
+	overflow-x: hidden;
+}
+
 hr {
 	border: solid 2px $white;
 	border-radius: 0;
